# urobosim_ros_config

./: CMakeLists.txt  README.md  package.xml
config/: ros_control_sim.yaml  tracebot.xacro  tracebot_sim.yaml
include/unreal_controller_manager/: UPR2ControllerManager.h
launch/: environment.launch  pr2.launch  pr2_no_controllers.launch  pr2new.launch  robot.launch  tracebot_environment.launch  tracebot_iai_robot.launch  tracebot_iai_world.launch  tracebot_robot.launch  tracebot_world.launch  world.launch
scripts/: Demo.py  DemoIntegration.py  DemoWithActions.py  HeadActionTest.py  SimpleBaseController.py  TestAction.py  TestGripperAction.py  TestPerceiveObject.py  TestTorso.py  single-arm-joint-move-python.py
src/: UPR2ControllerManager.cpp
srv/: RegisterRobot.srv  UpdateWorld.srv
